# coding: utf-8
[metadata]
name = doctor-wheel
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
license_files = LICENSE
author = Piotr Maślanka
author_email = pmaslanka@smok.co
description = A utility to strip and reduce the size of your wheels
url = https://github.com/smok-serwis/doctor-wheel
project-urls =
	Code = https://github.com/smok-serwis/doctor-wheel
	Issue tracker = https://github.com/smok-serwis/doctor-wheel/issues
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: POSIX
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Topic :: System :: Software Distribution

[pycodestyle]
max-line-length = 100

[pep8]
max-line-length = 100

[bdist_wheel]
universal = 1

